--- a/botillustrate/botjiemian.html
+++ b/botillustrate/botjiemian.html
@@ -23,29 +23,35 @@
     </style>
 </head>
 <body>
+    <div style="text-align: center;">
+        <p>大冯子的bot，客服微信wdmzsfb</p>
+        <p>qq通知群943145816
+            推荐好友下单送积分和代理</p>
+        </div>
+
     <div class="item">
         <p class="text">美团津贴</p>
-        <img class="image" src="./图片集/美团津贴.jpg" alt="示例图片1">
+        <img class="image" src="./图片集/美团津贴.jpg" alt="天天开心1">
     </div>
 
     <div class="item">
         <p class="text">饿了么新用户</p>
-        <img class="image" src="./图片集/饿了么新用户.jpg" alt="示例图片2">
+        <img class="image" src="./图片集/饿了么新用户.jpg" alt="天天开心2">
     </div>
 
     <div class="item">
         <p class="text">花小猪五折。</p>
-        <img class="image" src="./图片集/花小猪五折.jpg" alt="示例图片3">
+        <img class="image" src="./图片集/花小猪五折.jpg" alt="天天开心3">
     </div>
 
     <div class="item">
         <p class="text">滴滴无门槛</p>
-        <img class="image" src="./图片集/滴滴打车.jpg "alt="示例图片4">
+        <img class="image" src="./图片集/滴滴打车.jpg "alt="天天开心4">
     </div>
 
     <div class="item">
         <p class="text">滴滴567</p>
-        <img class="image" src="./图片集/滴滴567.jpg" alt="示例图片5">
+        <img class="image" src="./图片集/滴滴567.jpg" alt="天天开心5">
     </div>
 </body>
 </html>
