--- a/botillustrate/botjiemian.html
+++ b/botillustrate/botjiemian.html
@@ -106,6 +106,7 @@
         <button onclick="window.location.href='#image3'">花小猪五折</button>
         <button onclick="window.location.href='#image4'">滴滴无门槛</button>
         <button onclick="window.location.href='#image5'">滴滴567</button>
+        <button onclick="window.location.href='#image6'">美团社群</button>
         
 
     </div>
@@ -136,7 +137,17 @@
     </div> 
 
 
-
+    <div class="item">
+        <p class="text"  img id="image6">美团社群3</p> 
+        <p> 「美团新社群4头」  
+            2个入口】有堂食券也有外卖券  
+            质保4头 自己注意⚠️看规则
+            精准回执  过期自动失败  火爆别提交
+            提交格式：邀请发给机器人🤖</p>
+        <img class="image"  src="./图片集/美团社群3.png" alt="天天开心5">
+   
+    
+    </div> 
 
 
 
