--- a/botillustrate/botjiemian.html
+++ b/botillustrate/botjiemian.html
@@ -119,7 +119,7 @@
     </html>
 
     <div style="text-align: center;">
-        <p>大冯子的bot，客服微信wdmzsfb</p>
+        <p>大冯子的bot，客服微信wdmzsfb bot微信：QQ1901599191</p>
         <p>qq通知群943145816
             推荐好友下单送积分和代理</p>
         </div>
