--- a/botillustrate/botjiemian.html
+++ b/botillustrate/botjiemian.html
@@ -28,7 +28,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>跳转到图片位置</title>
+        <title>QQ1901599191 bot使用说明</title>
         <style>
             /* 简单的样式，使页面更美观 */
             /* 简单的样式，使页面更美观 */
@@ -119,7 +119,7 @@
     </html>
 
     <div style="text-align: center;">
-        <p>大冯子的bot，客服微信wdmzsfb bot微信：QQ1901599191</p>
+        <p>大冯子的bot，客服微信wdmzsfb  bot微信：QQ1901599191</p>
         <p>qq通知群943145816
             推荐好友下单送积分和代理</p>
         </div>
